--- a/app/index/view.ui
+++ b/app/index/view.ui
@@ -3,8 +3,8 @@
 	<object class="GtkBox" id="root">
 		<property name="orientation">vertical</property>
 		<child>
-			<object class="GtkLabel">
-				<property name="label">Hello GTK!</property>
+			<object class="GtkLabel" id="quote">
+				<property name="label">Loading...</property>
 			</object>
 			<packing>
 				<property name="expand">true</property>
