--- a/app/index/view.ui
+++ b/app/index/view.ui
@@ -3,8 +3,17 @@
 	<object class="GtkBox" id="root">
 		<property name="orientation">vertical</property>
 		<child>
+			<object class="GtkImage" id="loading-spinner">
+				<property name="file">images/spinner.png</property>
+				<property name="visible">true</property>
+				<style>
+					<class name="loading-spinner" />
+				</style>
+			</object>
+		</child>
+		<child>
 			<object class="GtkLabel" id="quote">
-				<property name="label">Loading...</property>
+				<property name="visible">false</property>
 			</object>
 			<packing>
 				<property name="expand">true</property>
