--- a/app/index/view.ui
+++ b/app/index/view.ui
@@ -14,6 +14,7 @@
 		<child>
 			<object class="GtkLabel" id="quote">
 				<property name="visible">false</property>
+				<property name="wrap">true</property>
 			</object>
 			<packing>
 				<property name="expand">true</property>
